# CHP_modelling

./: .clang-format  .gitignore  CMakeLists.txt  Cost_8h_source.html  Doxyfile  Flows_8h_source.html  LICENSE  LICENSE.md  Library__Water__Correlations_8h_source.html  Parameters_8cpp_source.html  Processes_8h_source.html  README.md  Rankine__cycle_8h_source.html  Thermodynamics__package_8h_source.html  annotated.html  annotated_dup.js  bioCHP_8cpp_source.html  bioCHP__plant_8h_source.html  classes.html  combustion_8h_source.html  conanfile.txt  detailed_model_documentation.html  dir_0c63cf7e1ea13ac461010060b9df74d7.html  dir_0c63cf7e1ea13ac461010060b9df74d7_dep.map  dir_0c63cf7e1ea13ac461010060b9df74d7_dep.md5  dir_43abd85af92d88708834e36edc58f9b3.html  dir_43abd85af92d88708834e36edc58f9b3_dep.map  dir_49e56c817e5e54854c35e136979f97ca.html  dir_52b50584d9ae756f940ebee2f160555a.html  dir_52b50584d9ae756f940ebee2f160555a.js  dir_52b50584d9ae756f940ebee2f160555a_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_a5e53cdfc4dc3e34218e25b9dcddbbe5.html  dir_a5e53cdfc4dc3e34218e25b9dcddbbe5.js  dir_a5e53cdfc4dc3e34218e25b9dcddbbe5_dep.map  dir_a5e53cdfc4dc3e34218e25b9dcddbbe5_dep.md5  doxygen_crawl.html  feedstock__characterization_8h_source.html  files.html  (+47 more)
0.2.0/: Rankine__cycle_8h_source.html  annotated.html  dir_95547ba983f030876b99038746ca5e7c_dep.map  flow__definitions_8h_source.html  functions_func.html  index.html  index.js  navtreedata.js  pages.html  structflow.html  structflow__coll__graph.map  structflow__parameters-members.html  structmaterial-members.html  structmaterial.html  structobject-members.html  structobject.js  structproperties.html  structproperties.js  structspecies.html  structsteam__turbine__parameters-members.html  utils_8h_source.html
Tests/: Flow_test.cpp  Flows_test.cpp  Output-bioCHP_test1  Output-bioCHP_test1clang++  Output-bioCHP_test3  Output-bioCHP_test4-1  Output-bioCHP_test_wrapper  Parameters_test.cpp  README.md  Steam_turbine_test.cpp  Thermodynamics_test.cpp  bioCHP_calculations_check.xlsm  bioCHP_manual_test.cpp  bioCHP_test_0-1.cpp  bioCHP_test_0-2.cpp  bioCHP_test_0-3.cpp  bioCHP_test_0-4.cpp  bioCHP_test_0-5.cpp  bioCHP_test_0.cpp  bioCHP_test_1.cpp  bioCHP_test_2.cpp  bioCHP_test_3.cpp  bioCHP_test_4-1.cpp  bioCHP_test_4-2.cpp  bioCHP_wrapper_test.cpp  expected_output.txt  flow_test  iDesignRES_bioCHP_calculations_check.xlsm  test0  test1  test_bioCHP.cpp  test_bioCHP_wrapper.cpp  test_cost.cpp  test_print_functionality.cpp  test_utils.h
dev/: Cost_8h_source.html  Flows_8h_source.html  Processes_8h_source.html  Rankine__cycle_8h_source.html  annotated.html  annotated_dup.js  bioCHP_8cpp_source.html  bioCHP__plant_8h_source.html  bioCHP__wrapper_8h_source.html  combustion_8h_source.html  dir_0c63cf7e1ea13ac461010060b9df74d7.html  feedstock__characterization_8h_source.html  files.html  flow__calculations_8h_source.html  flow__calculations___8h_source.html  flue__gas__cleaning_8h_source.html  menudata.js  pathfinder_8h_source.html  species__thermodynamics_8h_source.html  structmaterial.js  structparameter-members.html  structparameter.html  structphase.html  structphase__coll__graph.md5  structphysical__parameter-members.html  structproperties-members.html  structspecies-members.html  structspecies__coll__graph.map  structsteam__turbine__parameters.js
docs/: Doxyfile  README.md  bioCHP_model_description.md  bio_chp.md  contribute.md
latest/: feedstock__characterization_8h_source.html
main/: Parameters_8cpp_source.html  structNOX__reduction__parameters__coll__graph.map  structphase-members.html
search/: all_0.js  all_1.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  pages_1.js  pages_2.js  searchdata.js
src/: CREDITS.md  Cost.cpp  Cost.h  Flows.h  Parameters.cpp  Parameters.h  Processes.h  bioCHP.cpp  bioCHP.h  bioCHP_wrapper.cpp  bioCHP_wrapper.h  pathfinder.h  utils.cpp  utils.h
stable/: Rankine__cycle_8h_source.html  functions.html  navtreeindex0.js
unknown/: Cost_8h_source.html  Flows_8h_source.html  Library__Water__Correlations_8h_source.html  Parameters_8cpp_source.html  Parameters_8h_source.html  Processes_8h_source.html  Rankine__cycle_8h_source.html  annotated.html  annotated_dup.js  bioCHP_8cpp_source.html  bioCHP_8h_source.html  bioCHP__plant_8h_source.html  bioCHP__wrapper_8h.html  bioCHP__wrapper_8h.js  bioCHP__wrapper_8h_source.html  combustion_8h_source.html  detailed_model_documentation.html  detailed_model_documentation_page.html  dir_0c63cf7e1ea13ac461010060b9df74d7.js  dir_43abd85af92d88708834e36edc58f9b3.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_52b50584d9ae756f940ebee2f160555a_dep.md5  feedstock__characterization_8h_source.html  files.html  flow__calculations_8h_source.html  flow__calculations___8h_source.html  flow__definitions_8h_source.html  flow__definitions___8h_source.html  flue__gas__cleaning_8h_source.html  functions.html  functions_func.html  functions_vars.html  globals_func.html  index.html  index.js  md_docs_2bioCHP__model__description.html  md_docs_2contribute.html  md_docs_2example_2example.html  menudata.js  navtreedata.js  (+30 more)
v0.1.0/: Cost_8h_source.html  Flows_8h_source.html  Parameters_8cpp_source.html  Processes_8h_source.html  bioCHP_8cpp_source.html  classes.html  combustion_8h_source.html  detailed_model_documentation.html  dir_0c63cf7e1ea13ac461010060b9df74d7.html  dir_43abd85af92d88708834e36edc58f9b3.html  dir_43abd85af92d88708834e36edc58f9b3_dep.md5  dir_a5e53cdfc4dc3e34218e25b9dcddbbe5.html  dir_a5e53cdfc4dc3e34218e25b9dcddbbe5_dep.map  flow__definitions_8h_source.html  index.html  md_src_2CREDITS.html  species__thermodynamics_8h_source.html  structNOX__reduction__parameters.html  structflow__parameters-members.html  structparameter-members.html  structparameter.html  structphase__coll__graph.map  structphysical__parameter-members.html  structphysical__parameter.html  structspecies__coll__graph.map  structsteam__turbine__parameters-members.html
v0.2.0/: dir_95547ba983f030876b99038746ca5e7c_dep.md5  functions_vars.html  (+6 more)
(+324 files in other folders)
